mouse: Re-enable touchpad when mouse isn't present

https://bugzilla.gnome.org/show_bug.cgi?id=685941